simple-datawarehouse-backend: pom updates